Added calibration curve to BinaryClassificationMetrics